--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.3'
 
 services:
+
   service-routing:
     build:
       context: service-routing
@@ -8,6 +9,15 @@ services:
       - ./logs:/logs
       - ./conf-routing:/conf
       - ./datasource-routing:/datasource
+      - ./graph-cache:/graph-cache
     command: server conf/config.yml
     ports:
       - 8989:8989
+
+  nginx:
+    image: nginx:1.17.3-alpine
+    volumes: 
+      - ./conf-nginx/.htpasswd:/etc/nginx/.htpasswd
+      - ./conf-nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 1000:80
