--- a/service-routing/dockerfile
+++ b/service-routing/dockerfile
@@ -1,14 +1,6 @@
-FROM adoptopenjdk:11-jre-hotspot
-
-RUN useradd --no-create-home --no-user-group --shell /bin/bash appuser
-
-RUN mkdir conf datasource
+FROM openjdk:10
 
 COPY graphhopper-web-2.3.jar graphhopper-web-2.3.jar
-
-RUN chown appuser conf datasource
-
-USER appuser
 
 ENTRYPOINT [ "java", "-jar", "./graphhopper-web-2.3.jar" ]
 CMD [ "check", "conf/config.yml" ]
