--- a/conf-routing/config.yml
+++ b/conf-routing/config.yml
@@ -48,6 +48,9 @@ graphhopper:
     - name: car
       vehicle: car
       weighting: fastest
+    - name: foot
+      vehicle: foot
+      weighting: shortest
 
   #  - name: car_with_turn_costs
   #    vehicle: car
@@ -64,6 +67,7 @@ graphhopper:
   # usage) and the routing will also be slower than with `turn_costs: false`.
   profiles_ch:
     - profile: car
+    - profile: foot
 
   # Hybrid mode:
   # Similar to speed mode, the hybrid mode (Landmarks, LM) also speeds up routing by doing calculating auxiliary data
@@ -80,7 +84,7 @@ graphhopper:
 
 
   # To populate your graph with elevation data use SRTM, default is noop (no elevation). Read more about it in docs/core/elevation.md
-  # graph.elevation.provider: srtm
+  graph.elevation.provider: srtm
 
 
   # default location for cache is /tmp/srtm
